--- a/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
+++ b/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
@@ -56,6 +56,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CameraFactory.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="Validators\VirtualSceneArgumentValidator.cs" />
+    <Compile Include="VirtualSceneFactory.cs" />
     <Compile Include="VirtualSceneNavigation.cs" />
     <Compile Include="VirtualSceneViewport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
