--- a/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
+++ b/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
@@ -58,18 +58,18 @@
   <ItemGroup>
     <Compile Include="CameraFactory.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Validators\VirtualSceneArgumentValidator.cs" />
-    <Compile Include="VirtualSceneFactory.cs" />
-    <Compile Include="VirtualSceneNavigation.cs" />
-    <Compile Include="VirtualSceneViewport.cs" />
+    <Compile Include="Validators\SceneArgumentValidator.cs" />
+    <Compile Include="SceneFactory.cs" />
+    <Compile Include="SceneNavigation.cs" />
+    <Compile Include="SceneViewport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="VirtualSceneContent.cs" />
-    <Compile Include="VirtualSceneEngine.cs" />
+    <Compile Include="SceneContent.cs" />
+    <Compile Include="SceneEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
