Scene is made single. Cameras collection is added

--- a/VirtualScene.BusinessComponents.TestSuite/VirtualScene.BusinessComponents.TestSuite.csproj
+++ b/VirtualScene.BusinessComponents.TestSuite/VirtualScene.BusinessComponents.TestSuite.csproj
@@ -51,6 +51,19 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IntegrationTestCases.cs" />
+    <Compile Include="SceneEngineTestCases.cs" />
+    <Compile Include="SceneTestCases.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.SceneGraph\SharpGL.SceneGraph.csproj">
+      <Project>{47bcaa39-edad-4404-b6bd-4742b0abb523}</Project>
+      <Name>SharpGL.SceneGraph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VirtualScene.BusinessComponents.Core\VirtualScene.BusinessComponents.Core.csproj">
+      <Project>{5BEF2E8C-0895-4A9B-A530-F46CB3793CBE}</Project>
+      <Name>VirtualScene.BusinessComponents.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
