--- a/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
+++ b/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
@@ -44,6 +44,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessManager.cs" />
     <Compile Include="CameraFactory.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Validators\SceneArgumentValidator.cs" />
