Logic was extracted from MainWindowView to MainWindowViewModel

--- a/VirtualScene.Application.WPF/VirtualScene.Application.WPF.csproj
+++ b/VirtualScene.Application.WPF/VirtualScene.Application.WPF.csproj
@@ -65,6 +65,7 @@
     </ApplicationDefinition>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="Views\IMainWindowView.cs" />
     <Compile Include="Views\MainWindowView.xaml.cs">
       <DependentUpon>MainWindowView.xaml</DependentUpon>
     </Compile>
