--- a/VirtualScene.BusinessComponents.TestSuite/VirtualScene.BusinessComponents.TestSuite.csproj
+++ b/VirtualScene.BusinessComponents.TestSuite/VirtualScene.BusinessComponents.TestSuite.csproj
@@ -53,14 +53,17 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="BusinessManagerImport3DModelTestCases.cs" />
     <Compile Include="BusinessManagerTestCases.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="Mother.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SceneContentTestCases.cs" />
     <Compile Include="SceneEngineTestCases.cs" />
     <Compile Include="SceneTestCases.cs" />
     <Compile Include="ServiceLocatorTestCases.cs" />
     <Compile Include="StageTestCases.cs" />
+    <Compile Include="WavefrontImportTestCases.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.SceneGraph\SharpGL.SceneGraph.csproj">
