--- a/VirtualScene.EntityPresentationComponents.WPF/VirtualScene.EntityPresentationComponents.WPF.csproj
+++ b/VirtualScene.EntityPresentationComponents.WPF/VirtualScene.EntityPresentationComponents.WPF.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{92C10EDB-A772-4BE8-8900-5B6744BD659D}</ProjectGuid>
+    <ProjectGuid>{C9DBFFAB-1B05-4BB5-85B7-A5E0739E2C8C}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VirtualScene.PresentationComponents.WPF</RootNamespace>
-    <AssemblyName>VirtualScene.PresentationComponents.WPF</AssemblyName>
+    <RootNamespace>VirtualScene.EntityPresentationComponents.WPF</RootNamespace>
+    <AssemblyName>VirtualScene.EntityPresentationComponents.WPF</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\VirtualScene.PresentationComponents.WPF.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\VirtualScene.EntityPresentationComponents.WPF.XML</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,21 +32,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\VirtualScene.PresentationComponents.WPF.XML</DocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>bin\Release\VirtualScene.EntityPresentationComponents.WPF.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Accessibility" />
-    <Reference Include="Apex, Version=1.2.1.0, Culture=neutral, PublicKeyToken=98d06957926c086d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\SharpGL\sharpgl-master\source\SharpGL\Dependencies\Apex.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationUI, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="ReachFramework" />
-    <Reference Include="SharpGL, Version=2.3.0.1, Culture=neutral, PublicKeyToken=27fc851303210b27, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Printing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,34 +46,25 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="UIAutomationProvider" />
-    <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CommandBase.cs" />
-    <Compile Include="Commands\CommandWithSceneContentBase.cs" />
-    <Compile Include="Models\EntityNameViewModel.cs" />
-    <Compile Include="Models\ImageSourceEventArg.cs" />
-    <Compile Include="Commands\DelegateCommand.cs" />
-    <Compile Include="Presenters\ContentPresenterBase.cs" />
-    <Compile Include="Presenters\EntityPresenterBase.cs" />
-    <Compile Include="Presenters\IContentPresenter.cs" />
-    <Compile Include="Presenters\IEntityPresenter.cs" />
-    <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="ViewModels\ViewModelBase.cs" />
-    <Compile Include="Views\EntityNameDialogView.xaml.cs">
-      <DependentUpon>EntityNameDialogView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ViewModels\EntityNameDialogViewModel.cs" />
-    <Page Include="Views\EntityNameDialogView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="Commands\AddCameraCommand.cs" />
+    <Compile Include="Commands\AddCubeCommand.cs" />
+    <Compile Include="Commands\AddSceneObjectCommandBase.cs" />
+    <Compile Include="Commands\AddSphereCommand.cs" />
+    <Compile Include="Commands\Import3DModelCommand.cs" />
+    <Compile Include="Commands\OpenFileWith3DModelCommand.cs" />
+    <Compile Include="Commands\PerformImport3DModelCommand.cs" />
+    <Compile Include="Commands\SetCameraToSceneViewCommand.cs" />
+    <Compile Include="Models\SceneViewportModel.cs" />
+    <Compile Include="Presenters\CameraPresenter.cs" />
+    <Compile Include="Presenters\GeometryPrimitivePresenter.cs" />
+    <Compile Include="Presenters\SceneEntityPresenter.cs" />
+    <Compile Include="Presenters\SceneViewportPresenter.cs" />
+    <Compile Include="Presenters\StagePresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -96,6 +78,28 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ViewModels\Import3DModelViewModel.cs" />
+    <Compile Include="ViewModels\SceneEntityContentViewModel.cs" />
+    <Compile Include="ViewModels\SceneViewportViewModel.cs" />
+    <Compile Include="ViewModels\StageContentViewModel.cs" />
+    <Compile Include="Views\CameraContentView.xaml.cs">
+      <DependentUpon>CameraContentView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GeometryPrimitiveContentView.xaml.cs">
+      <DependentUpon>GeometryPrimitiveContentView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Import3DModelView.xaml.cs">
+      <DependentUpon>Import3DModelView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SceneEntityContentView.xaml.cs">
+      <DependentUpon>SceneEntityContentView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SceneViewportView.xaml.cs">
+      <DependentUpon>SceneViewportView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\StageContentView.xaml.cs">
+      <DependentUpon>StageContentView.xaml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -106,14 +110,19 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.SceneGraph\SharpGL.SceneGraph.csproj">
       <Project>{47bcaa39-edad-4404-b6bd-4742b0abb523}</Project>
       <Name>SharpGL.SceneGraph</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.WPF\SharpGL.WPF.csproj">
-      <Project>{53e67055-13d2-4467-bb57-79589afac2cd}</Project>
+      <Project>{53E67055-13D2-4467-BB57-79589AFAC2CD}</Project>
       <Name>SharpGL.WPF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL\SharpGL.csproj">
+      <Project>{5ef45533-e2c7-46f2-b4a3-b8f36cd406e0}</Project>
+      <Name>SharpGL %28SharpGL\SharpGL%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\VirtualScene.BusinessComponents.Common\VirtualScene.BusinessComponents.Common.csproj">
       <Project>{0DEFBE63-AC89-4476-BEB2-1D8ECCA08484}</Project>
@@ -123,11 +132,36 @@
       <Project>{5BEF2E8C-0895-4A9B-A530-F46CB3793CBE}</Project>
       <Name>VirtualScene.BusinessComponents.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VirtualScene.PresentationComponents.WPF\VirtualScene.PresentationComponents.WPF.csproj">
+      <Project>{92c10edb-a772-4be8-8900-5b6744bd659d}</Project>
+      <Name>VirtualScene.PresentationComponents.WPF</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Help.htm">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Page Include="Views\CameraContentView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GeometryPrimitiveContentView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Import3DModelView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\SceneEntityContentView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\SceneViewportView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\StageContentView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
